# qrcode_gen_c

./: CMakeLists.txt
src/: main.c
